[gd_scene load_steps=16 format=3 uid="uid://cd7t1s0lhlhj"]

[ext_resource type="Script" path="res://game/src/ui/screens/GameScreen.gd" id="1_s3g4i"]
[ext_resource type="Texture2D" uid="uid://clms4iwawhulv" path="res://game/mapa.png" id="2_8p2ye"]
[ext_resource type="Texture2D" uid="uid://bvoxyw3omivfy" path="res://game/Menu Botton.svg" id="3_e6dmn"]
[ext_resource type="Texture2D" uid="uid://csptbebeqabn1" path="res://game/high.png" id="3_heec4"]
[ext_resource type="Texture2D" uid="uid://1occrf37ylt6" path="res://game/Pause Btton.svg" id="4_njpr8"]
[ext_resource type="Texture2D" uid="uid://suu5qdh7p8ps" path="res://game/Play Botton.svg" id="5_qfscc"]
[ext_resource type="Texture2D" uid="uid://buam4yx8tep1y" path="res://game/Rev Con.svg" id="6_uaygh"]
[ext_resource type="Texture2D" uid="uid://bjohw8qbw6pyk" path="res://game/allend.png" id="7_t7pin"]
[ext_resource type="Texture2D" uid="uid://bsy0vvl3w53xv" path="res://game/Notification.svg" id="8_cop6j"]
[ext_resource type="Texture2D" uid="uid://bbsib5x4ucroc" path="res://game/min continare.png" id="9_p2134"]
[ext_resource type="Texture2D" uid="uid://uroucdt6fug" path="res://game/Consultar Botton.svg" id="10_dgvfy"]
[ext_resource type="Texture2D" uid="uid://cqy0gbvctwv5h" path="res://game/Min2.svg" id="11_1hw03"]
[ext_resource type="Texture2D" uid="uid://bnam1nuobfsxk" path="res://game/min3.svg" id="12_667hm"]
[ext_resource type="Texture2D" uid="uid://b3synsb3sa8kf" path="res://game/Min4.svg" id="13_l3uxn"]
[ext_resource type="Texture2D" uid="uid://bt38stgotw4vu" path="res://game/North.svg" id="14_7u68g"]

[node name="GameScreen" type="Node2D"]
script = ExtResource("1_s3g4i")

[node name="Background" type="TextureRect" parent="."]
offset_left = -7.0
offset_top = -18.0
offset_right = 1939.0
offset_bottom = 1153.0
texture = ExtResource("2_8p2ye")
expand_mode = 1
stretch_mode = 4

[node name="HighPanel Tex" type="TextureRect" parent="."]
offset_left = -5.0
offset_top = 1.0
offset_right = 581.0
offset_bottom = 129.0
texture = ExtResource("3_heec4")
expand_mode = 1

[node name="date_label" type="Label" parent="HighPanel Tex"]
layout_mode = 2
offset_left = 231.0
offset_top = 41.0
offset_right = 356.0
offset_bottom = 79.0
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HighPanel Tex"]
z_as_relative = false
y_sort_enabled = true
layout_mode = 1
anchors_preset = -1
offset_left = 4.0
offset_top = 1.0
offset_right = 556.0
offset_bottom = 118.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="Menu Botton" type="Button" parent="HighPanel Tex"]
layout_mode = 2
offset_left = 33.0
offset_top = 24.0
offset_right = 127.0
offset_bottom = 106.0
icon = ExtResource("3_e6dmn")
flat = true
icon_alignment = 1

[node name="Pause Botton" type="Button" parent="HighPanel Tex"]
layout_mode = 2
offset_left = 375.0
offset_top = 18.0
offset_right = 469.0
offset_bottom = 100.0
icon = ExtResource("4_njpr8")
flat = true
icon_alignment = 1

[node name="Play Botton" type="Button" parent="HighPanel Tex"]
layout_mode = 0
offset_left = 443.0
offset_top = 20.0
offset_right = 537.0
offset_bottom = 102.0
icon = ExtResource("5_qfscc")
flat = true
icon_alignment = 1

[node name="LeftPanel Tex" type="TextureRect" parent="."]
z_index = 3
offset_left = 4.0
offset_top = 860.0
offset_right = 605.0
offset_bottom = 1050.0
texture = ExtResource("6_uaygh")
stretch_mode = 2

[node name="LeftPanel" type="Panel" parent="LeftPanel Tex"]
z_index = 1
layout_mode = 0
offset_left = 2.0
offset_top = -1.0
offset_right = 419.0
offset_bottom = 160.0

[node name="RevolutionBar" type="ProgressBar" parent="LeftPanel Tex/LeftPanel"]
layout_mode = 0
offset_left = 174.0
offset_top = 105.0
offset_right = 255.0
offset_bottom = 162.0

[node name="Portrait" type="TextureRect" parent="LeftPanel Tex"]
z_index = -1
layout_mode = 2
offset_left = -94.0
offset_top = -510.0
offset_right = 536.0
offset_bottom = 114.0
texture = ExtResource("7_t7pin")
expand_mode = 1

[node name="NotificationTex" type="TextureRect" parent="."]
offset_left = 1440.0
offset_top = 629.0
offset_right = 1900.0
offset_bottom = 1018.0
texture = ExtResource("8_cop6j")

[node name="NotificationContainer" type="VBoxContainer" parent="NotificationTex"]
layout_mode = 0
offset_left = 6.0
offset_right = 458.0
offset_bottom = 376.0

[node name="RichTextLabel" type="RichTextLabel" parent="NotificationTex/NotificationContainer"]
layout_mode = 2

[node name="Min 1" type="TextureRect" parent="."]
offset_left = 1447.0
offset_top = 114.0
offset_right = 1663.0
offset_bottom = 341.0
texture = ExtResource("9_p2134")

[node name="Min1Container" type="VBoxContainer" parent="Min 1"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 204.0
offset_bottom = 236.0

[node name="Min name 1" type="Label" parent="Min 1/Min1Container"]
layout_mode = 2
horizontal_alignment = 2

[node name="lbl_dinheiro" type="Label" parent="Min 1/Min1Container"]
layout_mode = 2

[node name="ConsultarMin1" type="Button" parent="Min 1/Min1Container"]
layout_mode = 2
icon = ExtResource("10_dgvfy")
flat = true
icon_alignment = 1

[node name="Min 2" type="TextureRect" parent="."]
offset_left = 1678.0
offset_top = 115.0
offset_right = 1904.0
offset_bottom = 355.0
texture = ExtResource("11_1hw03")

[node name="Min2Container" type="VBoxContainer" parent="Min 2"]
layout_mode = 0
offset_left = 7.0
offset_top = 8.0
offset_right = 202.0
offset_bottom = 236.0

[node name="Min name 2" type="Label" parent="Min 2/Min2Container"]
layout_mode = 2
text = "ministeiros 2 
ou 3 oq quer 
que seja "
horizontal_alignment = 2

[node name="lbl_ameaca" type="Label" parent="Min 2/Min2Container"]
layout_mode = 2

[node name="ConsultarMin2" type="Button" parent="Min 2/Min2Container"]
layout_mode = 2
icon = ExtResource("10_dgvfy")
flat = true
icon_alignment = 1

[node name="Min 3" type="TextureRect" parent="."]
offset_left = 1445.0
offset_top = 360.0
offset_right = 1671.0
offset_bottom = 600.0
texture = ExtResource("12_667hm")

[node name="Min3Container" type="VBoxContainer" parent="Min 3"]
layout_mode = 0
offset_left = 9.0
offset_top = 5.0
offset_right = 224.0
offset_bottom = 233.0

[node name="Min name 3" type="Label" parent="Min 3/Min3Container"]
layout_mode = 2
horizontal_alignment = 2

[node name="ConsultarMin3" type="Button" parent="Min 3/Min3Container"]
layout_mode = 2
icon = ExtResource("10_dgvfy")
flat = true
icon_alignment = 1

[node name="lbl_dinheiro" type="Label" parent="Min 3/Min3Container"]
layout_mode = 2

[node name="Min 4" type="TextureRect" parent="."]
offset_left = 1664.0
offset_top = 345.0
offset_right = 1903.0
offset_bottom = 601.0
texture = ExtResource("13_l3uxn")

[node name="Min4Container" type="VBoxContainer" parent="Min 4"]
layout_mode = 0
offset_left = 21.0
offset_top = 22.0
offset_right = 234.0
offset_bottom = 232.0

[node name="Min name 4" type="Label" parent="Min 4/Min4Container"]
layout_mode = 2
horizontal_alignment = 2

[node name="lbl_estabilidade" type="Label" parent="Min 4/Min4Container"]
layout_mode = 2

[node name="ConsultarMin4" type="Button" parent="Min 4/Min4Container"]
layout_mode = 2
icon = ExtResource("10_dgvfy")
flat = true
icon_alignment = 1

[node name="North" type="Polygon2D" parent="."]
position = Vector2(1000, 411)
texture = ExtResource("14_7u68g")
polygon = PackedVector2Array(-32, 105, -4, 108, 6, -18, 16, -37, 27, -57, 29, -71, 27, -96, 43, -110, 44, -117, 32, -144, 15, -221, 6, -238, -2, -232, -11, -212, -2, -146, -8, -113, -13, -49, -21, -19)

[node name="Midle" type="Area2D" parent="."]
position = Vector2(954, 671)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Midle"]
position = Vector2(-132, -229)
polygon = PackedVector2Array(-8, 7, -31, 7, -56, 114, -5, 206, 48, 105, 24, 6)

[node name="South" type="Area2D" parent="."]
position = Vector2(1908, 1342)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="South"]
position = Vector2(-1101, -644)
polygon = PackedVector2Array(-8, 7, -31, 7, -56, 114, -5, 206, 48, 105, 24, 6)

[node name="North2" type="Area2D" parent="."]
position = Vector2(1908, 1342)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="North2"]
position = Vector2(-1139, -1145)
polygon = PackedVector2Array(-8, 7, -31, 7, -56, 114, -5, 206, 48, 105, 24, 6)
